--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <main class="container my-5 w-50 rounded-3">
     <img class="w-100 rounded-3" src="assets/images/image-omelette.jpeg" />
     <h1 class="container-title my-3">Simple Omelette Recipe</h1>
-    <p class="container-desc">
+    <p class="container-desc text-align-justify">
       An easy and quick dish, perfect for any meal. This classic omelette
       combines beaten eggs cooked to perfection, optionally filled with your
       choice of cheese, vegetables, or meats.
@@ -67,33 +67,33 @@
 
     <section>
       <h2 class="section-title my-3">Instructions</h2>
-      <ol class="section-list list-group ms-4">
+      <ol class="section-list list-group ms-4 gap-2">
         <li class="section-list-item">
-          <span><strong>Beat the eggs: </strong>In a bowl, beat the eggs with a
+          <span class="section-list-desc d-block ms-3"><strong>Beat the eggs: </strong>In a bowl, beat the eggs with a
             pinch of salt and pepper until they are well mixed. You can add a
             tablespoon of water or milk for a fluffier texture.</span>
         </li>
         <li class="section-list-item">
-          <span><strong>Heat the pan: </strong>Place a non-stick frying pan over
+          <span class="section-list-desc d-block ms-3"><strong>Heat the pan: </strong>Place a non-stick frying pan over
             medium heat and add butter or oil.</span>
         </li>
         <li class="section-list-item">
-          <span><strong>Cook the omelette: </strong>Once the butter is melted and
+          <span class="section-list-desc d-block ms-3"><strong>Cook the omelette: </strong>Once the butter is melted and
             bubbling, pour in the eggs. Tilt the pan to ensure the eggs evenly
             coat the surface.</span>
         </li>
         <li class="section-list-item">
-          <span><strong>Add fillings (optional): </strong>When the eggs begin to
+          <span class="section-list-desc d-block ms-3"><strong>Add fillings (optional): </strong>When the eggs begin to
             set at the edges but are still slightly runny in the middle,
             sprinkle your chosen fillings over one half of the omelette.</span>
         </li>
         <li class="section-list-item">
-          <span><strong>Fold and serve: </strong>As the omelette continues to
+          <span class="section-list-desc d-block ms-3"><strong>Fold and serve: </strong>As the omelette continues to
             cook, carefully lift one edge and fold it over the fillings. Let
             it cook for another minute, then slide it onto a plate.</span>
         </li class="section-list-item">
-        <li>
-          <span><strong>Enjoy: </strong>Serve hot, with additional salt and
+        <li class="section-list-item">
+          <span class="section-list-desc d-block ms-3"><strong>Enjoy: </strong>Serve hot, with additional salt and
             pepper if needed.</span>
         </li>
       </ol>
@@ -103,12 +103,30 @@
 
     <section>
       <h2 class="section-title my-3">Nutrition</h2>
-      <span>The table below shows nutritional values per serving without the
-        additional fillings.</span>
-      <span></span>
+      <span>The table below shows nutritional values per serving without the additional fillings.</span>
+      <div class="table d-flex p-2">
+        <!-- todo Fazer uma div row com cada linha -->
+        <table class="p-">
+          <tr>
+            <td>Calories</td>
+            <td>277kcal</td>
+          </tr>
+          <tr>
+            <td>Carbs</td>
+            <td>0g</td>
+          </tr>
+          <tr>
+            <td>Protein</td>
+            <td>20g</td>
+          </tr>
+          <tr>
+            <td>Fat</td>
+            <td>22g</td>
+          </tr>
+        </table>
+      </div>
     </section>
   </main>
-  Calories 277kcal Carbs 0g Protein 20g Fat 22g
 
   <div class="attribution">
     Challenge by
