Created the table at the end of the page

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-  <main class="container my-5 w-50 rounded-3">
+  <main class="container my-5 rounded-3">
     <img class="w-100 rounded-3" src="assets/images/image-omelette.jpeg" />
     <h1 class="container-title my-3">Simple Omelette Recipe</h1>
     <p class="container-desc text-align-justify">
@@ -98,32 +98,31 @@
         </li>
       </ol>
     </section>
-
     <hr />
-
     <section>
       <h2 class="section-title my-3">Nutrition</h2>
       <span>The table below shows nutritional values per serving without the additional fillings.</span>
-      <div class="table d-flex p-2">
-        <!-- todo Fazer uma div row com cada linha -->
-        <table class="p-">
-          <tr>
-            <td>Calories</td>
-            <td>277kcal</td>
-          </tr>
-          <tr>
-            <td>Carbs</td>
-            <td>0g</td>
-          </tr>
-          <tr>
-            <td>Protein</td>
-            <td>20g</td>
-          </tr>
-          <tr>
-            <td>Fat</td>
-            <td>22g</td>
-          </tr>
-        </table>
+      <div class="table">
+        <div class="row">
+          <span>Calories</span>
+          <span>277kcal</span>
+        </div>
+        <hr>
+        <div class="row">
+          <span>Carbs</span>
+          <span>0g</span>
+        </div>
+        <hr>
+        <div class="row">
+          <span>Protein</span>
+          <span>20g</span>
+        </div>
+        <hr>
+        <div class="row">
+          <span>Fat</span>
+          <span>22g</span>
+        </div>
+        <hr>
       </div>
     </section>
   </main>
