Finished challenge (with responsive layout)

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 <body>
   <main class="container my-5 rounded-3">
     <img class="w-100 rounded-3" src="assets/images/image-omelette.jpeg" />
-    <h1 class="container-title my-3">Simple Omelette Recipe</h1>
-    <p class="container-desc text-align-justify">
+    <h1 class="container-title my-4">Simple Omelette Recipe</h1>
+    <p class="container-desc">
       An easy and quick dish, perfect for any meal. This classic omelette
       combines beaten eggs cooked to perfection, optionally filled with your
       choice of cheese, vegetables, or meats.
@@ -41,9 +41,9 @@
       </ul>
     </section>
 
-    <section class="my-4 gap-5">
+    <section class="my-4">
       <h2 class="section-title my-3">Ingredients</h2>
-      <ul class="section-list list-group ms-4">
+      <ul class="section-list list-group ms-4 gap-2">
         <li class="section-list-item">
           <span class="section-list-desc">2-3 large eggs</span>
         </li>
@@ -65,7 +65,7 @@
 
     <hr />
 
-    <section>
+    <section class="mt-4">
       <h2 class="section-title my-3">Instructions</h2>
       <ol class="section-list list-group ms-4 gap-2">
         <li class="section-list-item">
@@ -99,38 +99,36 @@
       </ol>
     </section>
     <hr />
-    <section>
+    <section class="mt-4">
       <h2 class="section-title my-3">Nutrition</h2>
-      <span>The table below shows nutritional values per serving without the additional fillings.</span>
-      <div class="table">
-        <div class="row">
-          <span>Calories</span>
-          <span>277kcal</span>
-        </div>
+      <p class="container-desc">The table below shows nutritional values per serving without the additional fillings.</p>
+      <div class="container-footer">
+        <ul class="table">
+          <li class="table-item">Calories</li>
+          <li class="table-item table-highlight">277kcal</li>
+        </ul>
         <hr>
-        <div class="row">
-          <span>Carbs</span>
-          <span>0g</span>
-        </div>
+        <ul class="table">
+          <li class="table-item">Carbs</li>
+          <li class="table-item table-highlight">0g</li>
+        </ul>
         <hr>
-        <div class="row">
-          <span>Protein</span>
-          <span>20g</span>
-        </div>
+        <ul class="table">
+          <li class="table-item">Protein</li>
+          <li class="table-item table-highlight">20g</li>
+        </ul>
         <hr>
-        <div class="row">
-          <span>Fat</span>
-          <span>22g</span>
-        </div>
-        <hr>
+        <ul class="table">
+          <li class="table-item">Fat</li>
+          <li class="table-item table-highlight">22g</li>
+        </ul>
       </div>
     </section>
   </main>
 
-  <div class="attribution">
-    Challenge by
-    <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Your
-      Name Here</a>.
+  <div class="attribution d-flex flex-column align-items-center my-3">
+    <span>Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a></span>
+    <span>Coded by <a href="https://github.com/nicperonica">Nícolas Peronica</a></span>
   </div>
 </body>
 
